force-app/main/default/objects/Loan_Restructuring_Request__c/Loan_Restructuring_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks loan restructuring requests initiated by customers via TruZentra agent. Stores selected option, new EMI, and approval status. Developer: BlueForce Team.</description>
    <label>Loan Restructuring Request</label>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Restructuring Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>