force-app/main/default/objects/Loan_Restructuring_Request__c/fields/Additional_Interest__c.field-meta.xml
<CustomField>
    <fullName>Additional_Interest__c</fullName>
    <description>Total additional interest over loan lifetime</description>
    <label>Additional Interest</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>