force-app/main/default/objects/Loan_Restructuring_Request__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>FK to Customer Person Account</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Restructuring Requests</relationshipLabel>
    <relationshipName>Loan_Restructuring_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>