force-app/main/default/objects/Loan_Restructuring_Request__c/fields/Loan_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Financial_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>FK to the FinServ__FinancialAccount__c loan record being restructured. Developer: BlueForce Team.</description>
    <label>Loan Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Restructuring Requests</relationshipLabel>
    <relationshipName>Loan_Restructuring_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>