force-app/main/default/objects/Loan_Restructuring_Request__c/fields/Monthly_Savings__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Savings__c</fullName>
    <description>Difference between original and new EMI</description>
    <formula>Original_EMI__c - New_EMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>