force-app/main/default/objects/Loan_Restructuring_Request__c/fields/New_EMI__c.field-meta.xml
<CustomField>
    <fullName>New_EMI__c</fullName>
    <description>Calculated new monthly EMI</description>
    <label>New EMI</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>