force-app/main/default/objects/Loan_Restructuring_Request__c/fields/New_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>New_Tenure_Months__c</fullName>
    <description>New remaining tenure in months</description>
    <label>New Tenure</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>