force-app/main/default/objects/Loan_Restructuring_Request__c/fields/Original_EMI__c.field-meta.xml
<CustomField>
    <fullName>Original_EMI__c</fullName>
    <description>EMI before restructuring (for comparison)</description>
    <label>Original EMI</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>