force-app/main/default/objects/Loan_Restructuring_Request__c/fields/OTP_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>OTP_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Must be TRUE before Status can move to Submitted</description>
    <label>OTP Confirmed</label>
    <type>Checkbox</type>
</CustomField>