force-app/main/default/objects/Loan_Restructuring_Request__c/fields/RM_Callback_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>RM_Callback_Scheduled__c</fullName>
    <description>When RM will call customer</description>
    <label>RM Callback</label>
    <type>DateTime</type>
</CustomField>