force-app/main/default/objects/Loan_Restructuring_Request__c/fields/Selected_Option__c.field-meta.xml
<CustomField>
    <fullName>Selected_Option__c</fullName>
    <description>A (Extend 1yr), B (Extend 2yr), C (3-mo moratorium)</description>
    <label>Selected Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A - Extend 1 Year</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B - Extend 2 Years</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - 3-Month Moratorium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>