force-app/main/default/objects/Loan_Restructuring_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Loan_Financial_Account__c</columns>
    <columns>Selected_Option__c</columns>
    <columns>New_EMI__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>